--- a/src/styles/escape-room.css
+++ b/src/styles/escape-room.css
@@ -79,8 +79,8 @@ body {
 
 .table-button {
     position: absolute;
-    top: 70%; /* Adjust as needed to position over the table */
-    left: 50%; /* Adjust as needed to position over the table */
+    top: 75%;
+    left: 65%;
     transform: translate(-50%, -50%);
     width: 200px; /* Example size */
     height: 100px; /* Example size */
