--- a/src/styles/escape-room.css
+++ b/src/styles/escape-room.css
@@ -83,8 +83,8 @@ body {
     top: 70%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 200px; /* Example size */
-    height: 100px; /* Example size */
+    width: 40vw;
+    height: 20vh;
     background: rgba(255, 0, 0, 0.5);
     border: none;
     cursor: pointer;
