--- a/src/styles/escape-room.css
+++ b/src/styles/escape-room.css
@@ -85,7 +85,7 @@ body {
     transform: translate(-50%, -50%);
     width: 40vw;
     height: 20vh;
-    background: rgba(255, 0, 0, 0.5);
+    background: transparent;
     border: none;
     cursor: pointer;
     z-index: 4;
