--- a/src/styles/escape-room.css
+++ b/src/styles/escape-room.css
@@ -42,12 +42,7 @@ body {
     transform-origin: 50% 70%;
 }
 
-.room-container.zoom-active .background {
-    transform: scale(2.5);
-    z-index: 1;
-    opacity: 0;
-    transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out 1s;
-}
+
 
 .sticky-notes {
     position: fixed;
@@ -55,46 +50,37 @@ body {
     left: 0;
     width: 100vw;
     height: 100vh;
-    object-fit: cover;
-    transform: scale(0);
-    transition: transform 0.5s ease-in-out 1s, opacity 0.5s ease-in-out 1s;
     opacity: 0;
+    visibility: hidden;
     z-index: 5;
-}
-
-.room-container.zoom-active .sticky-notes {
-    transform: scale(1);
-    opacity: 1;
 }
 
 .answer-table {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%) scale(0);
-    transition: transform 0.5s ease-in-out 1s, opacity 0.5s ease-in-out 1s;
+    transform: translate(-50%, -50%) scale(1);
     opacity: 0;
+    visibility: hidden;
     z-index: 10;
     background-color: rgba(255, 255, 255, 0.8);
     padding: 20px;
     border-radius: 10px;
-}
-
-.room-container.zoom-active .answer-table {
-    transform: translate(-50%, -50%) scale(1);
-    opacity: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .table-button {
     position: absolute;
-    top: 70%;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 40vw;
-    height: 20vh;
-    background: none;
+    width: 20%;
+    height: 20%;
+    background: transparent;
     border: none;
     cursor: pointer;
     z-index: 100;
-    pointer-events: auto !important;
+    pointer-events: auto;
 }
